# Top50CryptoAnalyst

./: Makefile  README.md  pyproject.toml
Code/: backfill_features.py  compute_features.py  db_connection.py  live_features_service.py  test_features.py
docs/: EDA_CHECKLIST.md
models/linear_regression/: avalanche_metadata.json  axie_infinity_metadata.json  binance_coin_metadata.json  bitcoin_metadata.json  chainlink_metadata.json  ethereum_metadata.json  fantom_metadata.json  injective_metadata.json  litecoin_metadata.json  maker_metadata.json  render_metadata.json  solana_metadata.json  the_graph_metadata.json  toncoin_metadata.json  tron_metadata.json
notebooks/: DataWrangling.ipynb
notebooks/helpers/: README.md  time_series_analysis.py
reports/: LINEAR_REGRESSION_PERFORMANCE_REPORT.md
