[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Top50CyrptoAnaliyst"
version = "0.0.1"
description = "Making a model to predict future crypto prices"
authors = [
  { name = "Tanner Antons" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["Top50CyrptoAnaliyst"]
include = ["pyproject.toml", "Top50CyrptoAnaliyst/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["Top50CyrptoAnaliyst"]
force-sort-within-sections = true

